# Catpilot

./: .replit  CAR_ASSETS_INVENTORY.md  LICENSE  README.md  RELEASES.md  SECURITY.md  demo_pond.py  launch_chffrplus.sh  launch_env.sh  pyproject.toml  replit.md  run_the_pond.py
.github/workflows/: compile_catpilot.yaml  update_tinygrad.yaml
catpilot/: catpilot_process.py
catpilot/assets/: download_functions.py  model_manager.py  theme_manager.py
catpilot/classic_modeld/: classic_modeld.py  dmonitoringmodeld.py  fill_model_msg.py  navmodeld.py  parse_model_outputs.py
catpilot/common/: catpilot_functions.py  catpilot_utilities.py  catpilot_variables.py
catpilot/controls/: catpilot_card.py  catpilot_planner.py
catpilot/navigation/: mapd.py
catpilot/system/: catpilot_stats.py  environment_variables  speed_limit_filler.py
cereal/: README.md  car.capnp  custom.capnp  log.capnp  services.py
common/: git.py  params.py  prefix.py  realtime.py  retry.py  spinner.py  swaglog.py  text_window.py
docs/: AUTHORS.md  BOUNTIES.md  CARS.md  COMPILING.md  CONTRIBUTING.md  INTEGRATION.md  LIMITATIONS.md  MEDIA_ASSETS.md  Makefile  PANDA_COMPREHENSIVE_DOCUMENTATION.md  README.md  SAFETY.md  TOOLS.md  WORKFLOW.md  c_docs.rst  conf.py  index.md  overview.rst
opendbc/: README.md  toyota_new_mc_pt_generated.dbc  toyota_nodsu_pt_generated.dbc  toyota_rav4_prime_generated.dbc  toyota_secoc_pt_generated.dbc  toyota_tnga_k_pt_generated.dbc
panda/: README.md
system/: logmessaged.py  micd.py  sentry.py  statsd.py  timed.py  tombstoned.py  ugpsd.py  version.py
(+267 files in other folders)
